--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"apollo-server": "^2.25.2",
-		"graphql": "^15.5.1"
+		"graphql": "^15.5.1",
+		"uuid": "^8.3.2"
 	}
 }
